--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Aboutus.html">About us</a>
+                <a class="nav-link" href="About.html">About us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" 
